# test

./: CMakeLists.txt  README.md
.cache/clangd/index/: hello.cpp.1C242150F3A88D91.idx  hello.h.A2CDCF1198236118.idx  main.cpp.5870047C21179A0A.idx
hellolib/: CMakeLists.txt
hellolib/include/hello/: hello.h
hellolib/src/: hello.cpp
src/: main.cpp
