cmake_minimum_required(VERSION 3.17)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(hello_test LANGUAGES CXX)
add_subdirectory(hellolib)
file(GLOB SRC_LIST CONFIGURE_DEPENDS src/*.cpp)
message(STATUS  "SRC_LIST = ${SRC_LIST}" )
add_executable(${CMAKE_PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${CMAKE_PROJECT_NAME} hellolib)
